--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.3",
+    "@uiw/react-textarea-code-editor": "^3.1.0",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
