--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vm": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
