--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.47.3",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "next": "15.0.4",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
