--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,7 @@
   "semi": true,
   "bracketSpacing": true,
   "quoteProps": "as-needed",
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "importOrder": ["<THIRD_PARTY_MODULES>", "next(.*)/", "@/", "./"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
