--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.47.3",
     "@uiw/react-textarea-code-editor": "^3.1.0",
+    "jszip": "^3.10.1",
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.21",
     "react": "^19.0.0",
