--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.21",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -27,6 +28,7 @@
     "postcss": "^8",
     "prettier": "3.4.2",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
