--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/material-nextjs": "^7.0.2",
-    "@mui/x-charts": "^7.24.1",
+    "@mui/x-charts": "^8.0.0-beta.3",
     "@supabase/supabase-js": "^2.47.3",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "jszip": "^3.10.1",
