--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.21",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
