--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@mui/material": "^7.0.2",
     "@mui/material-nextjs": "^7.0.2",
     "@mui/x-charts": "^8.0.0-beta.3",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.47.3",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "jszip": "^3.10.1",
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.21",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
